styling issue on mobile

--- a/src/components/home/hero.scss
+++ b/src/components/home/hero.scss
@@ -1,6 +1,6 @@
 section.hero {
   position: relative;
-  padding: 70px;
+  // padding: 70px;
   background-color: rgba(0, 0, 0, 0.5);
   min-height: 520px;
   //   font-size: 22rem;
